# inventory-app

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: extractors.rs  main.rs
backend/src/api/: customer_routes.rs  inventory_routes.rs  mod.rs  order_routes.rs  product_routes.rs  special_routes.rs  status_routes.rs
backend/src/models/: customer.rs  database.rs  health.rs  inventory.rs  mod.rs  order.rs  product.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Types.tsx  index.css  main.tsx
frontend/src/components/: Breadcrumbs.tsx  CustomerCard.tsx  CustomerRow.tsx  DataTable.tsx  FeedbackPopup.tsx  InventoryItemRow.tsx  Navbar.tsx  OrderDetailsRow.tsx  OrderItemRow.tsx  Page.tsx  ProductItemRow.tsx  StatusBage.tsx
frontend/src/components/forms/: AddNewCustomerForm.tsx  AddNewOrderForm.tsx  AddNewProduct.tsx  AddNewProductForm.tsx  NumberInput.tsx  (+3 more)
frontend/src/hooks/: HealthCheck.tsx
frontend/src/pages/: CustomQueryPage.tsx  CustomersPage.tsx  HomePage.tsx  InventoryPage.tsx  NewOrderPage.tsx  OrdersPage.tsx  ProductsPage.tsx  SingleCustomerPage.tsx  SingleOrderPage.tsx  SingleProductPage.tsx  StatusPage.tsx  UpdateInventoryPage.tsx
frontend/src/schema/: CustomerSchema.tsx  InventoryItemSchema.tsx  OrderItemSchema.tsx  ProductItemSchema.tsx  schema.tsx
frontend/src/services/: constants.ts  customerService.ts  inventoryService.ts  monitoringService.ts  orderService.ts  productService.ts
frontend/src/styles/: App.css  CustomerCard.css  Navbar.css  Page.css  UpdateInventoryForm.css
frontend/src/types/: Inventory.tsx
(+22 files in other folders)
