[package]
name = "inventory-management"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[dependencies.uuid]
version = "1.23.0"
# Lets you generate random UUIDs
features = [
    "v4",
]